# Grep

./: CMakeLists.txt  configure.cpp  configure.h  main.cpp  poem.txt  readme.md  test
include/: grep.cpp  grep.h
